# tmux-sessionizer

./: .envrc  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  dist-workspace.toml  flake.nix  test_tmux.conf
.github/workflows/: clippy.yml  nix.yml  release.yml  test.yml
plans/: unify_sessions_and_projects.md
src/: cli.rs  clone.rs  configs.rs  dirty_paths.rs  error.rs  keymap.rs  lib.rs  main.rs  marks.rs  picker.rs  repos.rs  session.rs  tests.rs  tmux.rs
src/picker/: item.rs  mod.rs  preview.rs
tests/: cli.rs  session.rs
