[package]
name = "tmux-sessionizer"
version = "0.4.6"
authors = ["Jared Moulton <jaredmoulton3@gmail.com>"]
edition = "2021"
license = "MIT"
description = """
Tmux Sessionizer is a cli tool to fuzzy find all git repositories in a list of
specified folders and open them as a new tmux session. Also, for git worktrees,
this tool opens all checked out worktrees as new windows. 
"""
homepage = "https://github.com/jrmoulton/tmux-sessionizer"
repository = "https://github.com/jrmoulton/tmux-sessionizer"
exclude = ["images/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version= "0.18.1", features = [ "vendored-openssl" ] }
clap = { version = "4.4.6", features = ["cargo"] }
serde_derive = "1.0"
serde = "1.0"
error-stack = "0.4.1"
shellexpand = "3.1.0"
aho-corasick = "1.0.1"
shell-words = "1.1.0"
config = { version = "0.13.4", default-features = false, features = ["toml"] }
toml = "0.5"
dirs = "5.0.1"
nucleo = "0.3.0"
ratatui = "0.25.0"
crossterm = "0.27.0"

[[bin]]
name = "tms"
path = "src/main.rs"

[dev-dependencies]
once_cell = "1.18.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
codegen-units = 1

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
allow-dirty = ["ci"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

