[package]
name = "tmux-sessionizer"
version = "0.3.2"
authors = ["Jared Moulton <jaredmoulton3@gmail.com>"]
edition = "2021"
license = "MIT"
description = """
Tmux Sessionizer is a cli tool to fuzzy find all git repositories in a list of
specified folders and open them as a new tmux session. Also, for git worktrees,
this tool opens all checked out worktrees as new windows. 
"""
homepage = "https://github.com/jrmoulton/tmux-sessionizer"
repository = "https://github.com/jrmoulton/tmux-sessionizer"
exclude = ["images/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
serde_derive = "1.0"
serde = "1.0"
error-stack = "0.4.1"
shellexpand = "3.1.0"
aho-corasick = "1.0.1"
shell-words = "1.1.0"
config = { version = "0.14", default-features = false, features = ["toml"] }
toml = "0.8"
dirs = "5.0.1"
nucleo = "0.3.0"
ratatui = "0.26.0"
crossterm = "0.27.0"

[[bin]]
name = "tms"
path = "src/main.rs"

[dev-dependencies]
once_cell = "1.18.0"
